--- a/Index.org
+++ b/Index.org
@@ -2,7 +2,7 @@
 #+OPTIONS: reveal_embed_local_resources:t
 #+OPTIONS: reveal_width:1600 reveal_height:1000
 #+OPTIONS: num:nil toc:nil author:nil email:t timestamp:t title:t
-#+REVEAL_TITLE_SLIDE: %t <br> %e <br> Compiled %T <br> <br> The link to a PDF version https://tinyurl.com/5n6vztrz <br> The link to the GitHub page https://mj-ramirez.github.io/ARU-Presentation-Feb-2025/
+#+REVEAL_TITLE_SLIDE: %t <br> %e <br> Compiled %T <br> <br> <a href="https://tinyurl.com/5n6vztrz">This link for a PDF version </a> <br> <a href="https://mj-ramirez.github.io/ARU-Presentation-Feb-2025/">The link for the GitHub page</a>
 #+REVEAL_INIT_OPTIONS: margin: 0.001, minScale:0.2, maxScale:2.5, transition:'convex'
 #+REVEAL_THEME: Sky
 #+REVEAL_SLIDE_FOOTER: Broomfield MSE Vascular Unit
